fix contrast which was AA contrast fail

--- a/styles/base.css
+++ b/styles/base.css
@@ -29,13 +29,14 @@
 /*************default values*************/
 a
 {
-	color: var(--color-prim-text-dark);
+
 	text-decoration: none;
 	list-style: none;
 	justify-content: space-around;
 	padding: 0;
 	margin: 0;
 	font-weight: bold;
+	color: white
 }
 
 a:hover
@@ -63,7 +64,7 @@ li
 	justify-content: space-around;
 	padding: 0;
 	margin: 0;
-
+	color: white
 }
 
 ul
@@ -368,9 +369,28 @@ body
 	margin: 0;
 	text-align: center;
 	font-weight: bold;
+	color: rgb(251, 250, 250);
 
 }
 
+.resource-list a:hover
+{
+	text-decoration: underline;
+	color: rgb(233, 219, 20);
+}
+
+.resource-list a:visited
+{
+	color: rgb(255, 253, 253);
+	text-decoration: none;
+	list-style: none;
+	justify-content: space-around;
+	padding: 0;
+	margin: 0;
+	text-align: center;
+	font-weight: bold;
+
+}
 
 .footer-container
 {
